Iron-Gallery/irongallery-app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  selector:
    run: iron-gallery
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30099

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
  labels:
    run: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      containers:
      - name: iron-gallery-container
        image: kodekloud/irongallery:2.0
        volumeMounts:
          - name: images
            mountPath: /usr/share/nginx/html/uploads
          - name: config
            mountPath: /usr/share/nginx/html/data
        resources:
            limits:
              memory: 100Mi
              cpu: 50m
      volumes:
        - name: images
          emptyDir: {}
        - name: config
          emptyDir: {}
